@@ -3,6 +3,7 @@
 - Added spaceX/Y to FreeType fonts.
 - Higher quality FreeType font rendering.
 - Hiero updated to v5, now with FreeType support and other new features!
+- GlyphLayout now allocates much, much less memory when processing long text that wraps.
 
 [1.7.2]
 - Added AndroidAudio#newMusic(FileDescriptor) to allow loading music from a file descriptor, see #2970
